--- a/templates/blog.html
+++ b/templates/blog.html
@@ -12,7 +12,8 @@
 
             <a href="/blog?id={{post.id}}"><p><h2>{{ post.title }}</h2></p></a>
             <p class="body-text">{{ post.body }}</p>
-            
+            <p class="pub-date">Posted on: {{ post.pub_date }}</p>
+            <p class="user">Posted by: <a href="/blog?userid={{post.owner_id}}">{{ post.owner.username }}</a></p>
 
           </div>
           {% endfor %}
